# internal/routers/user/user.router.go
@@ -27,6 +27,7 @@ func (ur *UserRouter) InitUserRouter(router *gin.RouterGroup) {
 	userRouterPrivate.Use(middlewares.AuthenMiddleware())
 	{
 		userRouterPrivate.GET("/get_info")
-		userRouterPrivate.POST("/two_factor/setup", account.TwoFA.SetupTwoFactorAuth)
+		userRouterPrivate.POST("/two-factor/setup", account.TwoFA.SetupTwoFactorAuth)
+		userRouterPrivate.POST("/two-factor/verify", account.TwoFA.VerifyTwoFactorAuth)
 	}
 }
